switch namespaces to DFT

--- a/_config/legacy.yml
+++ b/_config/legacy.yml
@@ -4,3 +4,4 @@ Name: childhubpagelegacy
 SilverStripe\ORM\DatabaseAdmin:
   classname_value_remapping:
     ChildHubPage: ilateral\SilverStripe\ChildHubPage\Model\ChildHubPage
+    ilateral\SilverStripe\ChildHubPage\Model\ChildHubPage: DFT\SilverStripe\ChildHubPage\Model\ChildHubPage
